# SWJTU-Software-Engineering-Major-Computer-Graphics-Experiments

./: CMakeLists.txt  README.md
README/: Exp_1.md
Reports/: Exp_2.md
include/: common.h  graphics.cpp  graphics.h
src/: main.cpp
src/appcore/: GraphicsApp.cpp  GraphicsApp.h
src/graphics/: DrawingAlgorithms.cpp  DrawingAlgorithms.h  ExistingGraphics.cpp  ExistingGraphics.h  FillAlgorithms.cpp  FillAlgorithms.h  GraphicsManager.cpp  GraphicsManager.h  InteractiveGraphics.cpp  InteractiveGraphics.h
src/models/: GraphicsTypes.h  Point.h
src/ui/: TabManager.cpp  TabManager.h  UIComponents.cpp  UIComponents.h
